<!--
  ~ Copyright (c) 2016. Devdatt s bhatt
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the
  ~ License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF
  ~ ANY KIND, either express or implied. See the License for the specific language governing
  ~ permissions and limitations under the License.
  -->

<resources>
    <string name="app_name">D Deleted Contact</string>
    <string name="splash_dbhatt_org" translatable="false">Dbhatt.org</string>
    <string name="all_contact">Contacts</string>
    <string name="deleted_contact">Deleted</string>
    <string name="no_data_found">No Data Found</string>
    <string name="dismiss">Dismiss</string>
    <string name="share">Share</string>
    <string name="thank_you">Thank you for share/invite</string>
    <string name="contact_developer">Error occur, contact developer.</string>
    <string name="install_whats_app">Install Whats App first</string>
    <string name="install">Install</string>
    <string name="coming_soon">Coming soon</string>
    <string name="rating_thank_you_message">Thank you for 5 star ratings</string>
    <string name="press_again_to_exit">Please click back again to exit</string>

    <!-- Toast messages-->
    <string name="try_after_some_time">Try After Some Time</string>

    <!-- action menu -->
    <string name="action_language">Language</string>
    <string name="action_rate_us">Rate us</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_restore_all">Restore All</string>
    <string name="action_app_invite">Invite Friends</string>
    <string name="action_contact_us">Contact us</string>

    <!-- default value-->
    <string name="contact_name">Contact name</string>
    <string name="contact_phone_number">Contact number</string>
    <string name="contact_account_type">Account Type</string>

    <!-- descriptions -->
    <string name="description_contact_photo">Contact Photo</string>
    <string name="description_contact_info">Contact info</string>

    <!--static link-->
    <string name="static_contact_us_whats_app">Contact developer directly on WhatsApp.</string>
    <string name="static_contact_us_developer">Google+ group for Developers, Testers and contributors.</string>
    <string name="static_contact_us_language">Google+ group for Translators and Language lovers.</string>
    <string name="static_contact_us_google_plus">To Meet me on Google+.</string>
    <string name="static_contact_us_linkedin">To Join as contributor and Developer.</string>
    <string name="static_contact_us_facebook">Official Facebook Page.</string>

    <!-- app invite fire base-->
    <string name="invite_title">Invite Friends</string>
    <string name="invite_message">Deleted Contact is Open source, Freeware, Advertise-free android app.</string>
    <string name="invite_email_subject" translatable="false">@string/app_name</string>
    <string name="invite_html_contact" translatable="false">%%APPINVITE_LINK_PLACEHOLDER%%</string>

    <!-- Alert dialog box-->
    <string name="permission">Permission</string>
    <string name="permission_message_write_external_storage">WRITE_EXTERNAL_STORAGE permission is needed</string>
    <string name="permission_message_read_contact">READ_CONTACTS permission is needed</string>
    <string name="permission_message_write_contact">WRITE_CONTACTS permission is needed</string>
    <string name="permission_grant">Grant</string>
    <string name="restore">Restore</string>
    <string name="rate_us_title">rating is important for us</string>
    <string name="rate_us_message">congratulations ..!!! \n \n your contacts is recovered. \n \n please review us.</string>
    <string name="rate_us_positive_button">Rate us.</string>
    <string name="rate_us_negative_button">Contact us.</string>
    <string name="rate_us_neutral_button">Not now.</string>

    <!-- hidden string
        variable    data_type
        ##########################################################
        ratings     boolean
        not_now     boolean
        never       boolean
    -->
</resources>