<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_restore_all"
        android:orderInCategory="1"
        android:title="@string/action_restore_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_app_invite"
        android:orderInCategory="2"
        android:title="@string/action_app_invite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="3"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact_us"
        android:orderInCategory="99"
        android:title="@string/action_contact_us"
        app:showAsAction="never" />
</menu>