<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <android.support.v7.widget.CardView
        android:id="@+id/contact_raw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <org.dbhatt.d_deleted_contact.Custum_view.CircleImageView
                android:id="@+id/contact_photo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="13dp"
                android:contentDescription="@string/description_contact_photo" />

            <ImageView
                android:id="@+id/contact_info"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/description_contact_info"
                android:src="@drawable/ic_info_outline_black_24dp" />

            <TextView
                android:id="@+id/contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/contact_photo"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_toEndOf="@+id/contact_photo"
                android:layout_toLeftOf="@+id/contact_info"
                android:layout_toRightOf="@+id/contact_photo"
                android:layout_toStartOf="@+id/contact_info"
                android:text="@string/contact_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                android:textColor="#000000" />


            <TextView
                android:id="@+id/contact_account_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contact_name"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_toEndOf="@+id/contact_photo"
                android:layout_toLeftOf="@+id/contact_info"
                android:layout_toRightOf="@+id/contact_photo"
                android:layout_toStartOf="@+id/contact_info"
                android:text="@string/contact_account_type"
                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                android:textColor="#000000" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>